[tool.poetry]
name = "personal-finances"
version = "0.1.0"
description = ""
authors = ["Arthur Neves"]
readme = "README.md"
packages = [{include = "personal_finances"}]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.25.0"
pandas = "^2.0.3"
matplotlib = "^3.7.2"
plotly = "^5.16.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
